// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.TextIcon check default default props from Mixins UU5.Commons - Base, Elementary, Pure and ColorSchema default props mixin 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon check default default props from Mixins UU5.Forms.InputMixin 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon check default default props from Mixins UU5.Forms.TextInputMixin 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon default props UU5.Forms.TextIcon check default props 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props autocompleteItems=undefined 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props className="my-classname" 1`] = `
<div
  className="uu5-forms-text-icon my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props className="test-classname" 1`] = `
<div
  className="uu5-forms-text-icon test-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="brown"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="brown-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="cyan"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="cyan-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="default"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="green"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="green-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="grey"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="grey-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="orange"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="orange-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="pink"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="pink-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="purple"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="purple-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="red"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="red-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="yellow"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      colorSchema="yellow-rich"
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props controlled=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props controlled=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props default props 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props disabled=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props disabled=false 3`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props disabled=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      disabled={true}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props disabled=true 3`] = `
<div
  className="uu5-forms-text-icon uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      disabled={true}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props feedback="error" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="error"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props feedback="initial" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props feedback="loading" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      disabled={true}
      feedback="loading"
      iconOnClick={[Function]}
      id="uuID-input"
      loading={true}
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props feedback="success" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="success"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props feedback="warning" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="warning"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props focusMessage="Bedlivě hlídám co píšete." 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-forms-text-icon uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props function -> InputMixin onChange() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props function -> InputMixin onChange() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextIcon props function -> InputMixin onChangeFeedback() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props function -> InputMixin onChangeFeedback() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextIcon props function -> InputMixin onValidate() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props function -> InputMixin onValidate() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin onBlur() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin onBlur() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin onEnter() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin onEnter() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin onFocus() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin onFocus() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin validateOnChange() - input is invalid 1`] = `
<div
  className="uu5-forms-text-button uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Search"
    for="uuID-input"
  />
  <InputWrapper
    buttons={Array []}
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Not valid."
    readonly={false}
  >
    <autocomplete-text-input
      feedback="error"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props function -> Text.InputMixin validateOnChange() - input is valid 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Search"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="Is valid."
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="success"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props hidden=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props hidden=false 3`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props hidden=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props hidden=true 3`] = `
<div
  className="uu5-forms-text-icon uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props icon="uu-icon-ok" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      icon="uu-icon-ok"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props iconPosition="left" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props iconPosition="right" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props id="myId" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="myId-input"
      mainAttrs={Object {}}
      name="myId-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props id="test-id" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="test-id"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="test-id-input"
      mainAttrs={Object {}}
      name="test-id-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={
        Object {
          "type": "email",
          "width": "150px",
        }
      }
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props label="Your personal email" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props name="myName" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="myName"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props nestingLevel="box" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props nestingLevel="inline" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-inline uu5-forms-input-auto-width uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      inputWidth="auto"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props noIndex=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props noIndex=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-noindex uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props noPrint=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props noPrint=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props onClick() 1`] = `
<TextIcon
  id="checkID"
  label="Fill your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextIcon props onClick() 2`] = `
<TextIcon
  feedback="success"
  id="checkID"
  label="Fill your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onClick={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="onClick"
/>
`;

exports[`UU5.Forms.TextIcon props password=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props password=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
      type="password"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props patter="[A-Za-z]{3}" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props patterMessage="Toto není to, co jsem čekal." 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props patternMessage="Hodnota inputu není validní." 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props placeholder="Prosím vyplňte požadované pole .." 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Prosím vyplňte požadované pole .."
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props placeholder="např.: +420 000 000 000" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="např.: +420 000 000 000"
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props pureRender=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props pureRender=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props readOnly=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props readOnly=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={true}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props required=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props required=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    required={true}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props requiredMessage="Bez tohoto pole se nehnete dál." 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props selected=false 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props selected=true 1`] = `
<div
  className="uu5-forms-text-icon uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props size="l" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-l uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="l"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props size="m" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props size="s" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="s"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props style={"margin":8} 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextIcon props value="Zadejte heslo." 1`] = `
<div
  className="uu5-forms-text-icon uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-text-icon-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      clickable={false}
      feedback="initial"
      iconOnClick={[Function]}
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
      value="Zadejte heslo."
    />
  </InputWrapper>
</div>
`;
